Change the video and add image

--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -7,9 +7,9 @@
   <div class="new header-image-background dimmed-image-background">
     <div class="new overlay"></div>
 
-    <div class="video-container">
+    <div class="video-container" style="background-image:url({% static 'images/homepage-header.png' %})">
       <video preload muted loop autoplay id="player">
-        <source type="video/webm" src="{% static 'hacksoft_video.mp4' %}">
+        <source type="video/webm" src="{% static 'hack.webm' %}">
       </video>
     </div>
 
