--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -43,10 +43,10 @@ a {
     max-height: 100vh;
     text-align: center; }
     .dimmed-image .dimmed-image-background .video-container {
+      background-size: cover;
       position: absolute;
       height: 100%;
-      width: 200%;
-      left: -50%; }
+      width: 100%; }
       .dimmed-image .dimmed-image-background .video-container #player {
         height: auto;
         min-height: 100%;
