--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -56,10 +56,11 @@ a {
       max-height:100vh;
       text-align:center;
       .video-container {
+        background-size: cover;
         position:absolute;
         height:100%;
-        width:200%;
-        left:-50%;
+        width:100%;
+
         #player {
           height:auto;
           min-height:100%;
