--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -579,7 +579,8 @@ a {
   padding-bottom:0px;
   img {
     padding: 21px;
-    width: 110px;
+    max-width: 110px;
+    max-height: 110px;
   }
 }
 
@@ -640,7 +641,7 @@ a {
         max-width:1100px;
         margin-left:auto;
         margin-right:auto;
-        
+
         @media screen and (max-width:1100px) {
             max-width:90%;
         }
@@ -652,7 +653,7 @@ a {
             padding-top:30px;
             text-align:left;
             &:first-child {
-                text-align: left; 
+                text-align: left;
             }
             &.right {
                 text-align:right;
@@ -666,7 +667,11 @@ a {
     .copyright {
         font-weight: bold;
     }
-    
+    .hosting-partner {
+        width: 65px;
+        position: relative;
+        top: 6px
+    }
     ul {
         padding-left:0;
         margin-bottom:20px;
