--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -22,6 +22,17 @@
     <!-- This file stores project-specific CSS -->
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
     <link href="{% static 'css/icons.css' %}" rel="stylesheet">
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-47118692-5', 'auto');
+      ga('send', 'pageview');\
+    </script>
+
   </head>
 
   <body>
