--- a/hacksoft/templates/website/portfolio_page.html
+++ b/hacksoft/templates/website/portfolio_page.html
@@ -17,26 +17,25 @@
 <div class="content-wrapper" >
 
   <div class="section how-we-work">
+      <div class="row box-container">
+        {% for placement in self.clients_placement.all %}
+          <div class="client-box" data-client-number="{{ forloop.counter }}">
+            {% image placement.client.logo original as client_logo %}
+            <img src="{{client_logo.url}}" class="filter_image wow flipInX box-logo"/>
+          </div>
+        {% endfor %}
+      </div>
 
-    <div class="row box-container">
-      {% for client in clients %}
-        <div class="client-box" data-client-number="{{ forloop.counter }}">
-          {% image client.logo original as client_logo %}
-          <img src="{{client_logo.url}}" class="filter_image wow flipInX box-logo"/>
-        </div>
-      {% endfor %}
-    </div>
-
-    {% for client in clients %}
+    {% for placement in self.clients_placement.all %}
       <div class="section-heading" id="clinet-number-{{ forloop.counter }}">
-        <div><strong>{{ client.name }}</strong></div>
+        <div><strong>{{ placement.client.name }}</strong></div>
       </div>
 
       <div class="client-description">
-        {{ client.description|richtext }}
+        {{ placement.client.description|richtext }}
       </div>
 
-      {% for project in client.project_set.all %}
+      {% for project in placement.client.project_set.all %}
       <div class="section-content-row  float-container  portfolio-landing wow row {% cycle 'fadeInLeftBig' 'fadeInRightBig' %} ">
 
         <div class="col-md-10">
