Add blog models

--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -30,7 +30,7 @@
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-47118692-5', 'auto');
-      ga('send', 'pageview');\
+      ga('send', 'pageview');
     </script>
 
   </head>
