--- a/hacksoft/templates/website/portfolio_page.html
+++ b/hacksoft/templates/website/portfolio_page.html
@@ -21,7 +21,7 @@
         {% for placement in self.clients_placement.all %}
           <div class="client-box" data-client-number="{{ forloop.counter }}">
             {% image placement.client.logo original as client_logo %}
-            <img src="{{client_logo.url}}" class="filter_image wow flipInX box-logo"/>
+            <img src="{{client_logo.url}}" alt="{{ placement.client.name }}" title="{{ placement.client.name }}"class="filter_image wow flipInX box-logo"/>
           </div>
         {% endfor %}
       </div>
@@ -49,7 +49,7 @@
           <div class="portfolio-technologies">
             {% for technology in project.technologies.all %}
               {% image technology.logo max-100x100 as tech_logo %}
-              <img src="{{tech_logo.url}}" class="filter_image wow flipInX" />
+              <img src="{{tech_logo.url}}" alt="{{ technology.name }}" title="{{ technology.name }}" class="filter_image wow flipInX" />
             {% endfor %}
           </div>
         </div>
