--- a/hacksoft/templates/tags/footer.html
+++ b/hacksoft/templates/tags/footer.html
@@ -25,7 +25,7 @@
           </div>
         </div>
       </div>
-      <div class="vertical-section right">
+      <div class="vertical-section right footer-contact-text">
         <div class="section-header">
           {{ footer.contact_text }}
         </div>
