--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -709,6 +709,18 @@ a {
             text-align: center;
         }
     }
+
+    .footer-contact-text {
+        b {
+            @media screen and (max-width:425px) {
+                display:block;
+                font-size: 14px;
+            }
+            @media screen and (max-width:320px) {
+                font-size: 12px;
+            }
+        }
+    }
 }
 
 .team-page-dimmed-image {
@@ -1598,10 +1610,17 @@ a {
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
     padding:10px;
+    @media screen and (max-width: 768px){
+        width:50%;
+    }
+    @media screen and (max-width: 425px){
+        width:100%;
+    }
     .blog-post {
         box-shadow: 0px 10px 15px #ababab;
         padding: 10px;
         margin: 10px 5px 15px 5px;
+
         .head-image {
             width: 100%;
             height: 190px;
@@ -1635,6 +1654,11 @@ a {
           border-radius:50%;
           float:right;
           margin:-35px 5px 0 0;
+          @media screen and (max-width: 320px){
+            margin:-27px 5px 0 0;
+            width:50px;
+            height:50px;
+          }
         }
         .authors {
           font-weight: bold;
@@ -1682,6 +1706,16 @@ a {
             margin-left:20px;
             margin-right:20px;
         }
+
+        @media screen and (max-width:425px) {
+            margin-bottom:10px;
+            &:after {
+                display:block;
+                content:"";
+                clear:both;
+                float:none;
+            }
+        }
         &:last-child:after{
             display: none;
         }
@@ -1694,6 +1728,10 @@ a {
             background-size:cover;
             border-radius:50%;
             float:left;
+            @media screen and (max-width:425px) {
+                width:80px;
+                height:80px;
+            }
         }
         .author_name {
             line-height:100px;
@@ -1701,6 +1739,9 @@ a {
             margin-left:20px;
             font-weight: bold;
             font-size: 20px;
+            @media screen and (max-width:425px) {
+                line-height:80px;
+            }
         }
     }
     .article-title {
@@ -1711,10 +1752,16 @@ a {
       margin-top: -20px;
       padding-bottom: 20px;
     }
+    .article-text {
+        .highlight pre{
+            white-space: normal;
+        }
+    }
     .article-main-image {
         img {
           width:100%;
           margin-top:10px;
+          height:auto;
         }
     }
     .section-content {
