--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1754,7 +1754,7 @@ a {
     }
     .article-text {
         .highlight pre{
-            white-space: normal;
+            white-space: pre-wrap;
         }
     }
     .article-main-image {
