--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1620,7 +1620,6 @@ a {
         box-shadow: 0px 10px 15px #ababab;
         padding: 10px;
         margin: 10px 5px 15px 5px;
-
         .head-image {
             width: 100%;
             height: 190px;
@@ -1687,6 +1686,15 @@ a {
 }
 
 .blog-post-page {
+    code {
+      background-color: #f8f8f8;
+    }
+    a {
+      color: #F79824;
+    }
+    pre {
+      padding: 4px;
+    }
     padding-top: 70px;
     .back-to-blog {
         display:inline-block;
