--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -15,6 +15,9 @@
         <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     <!-- Latest compiled and minified Bootstrap 4 Alpha 3 CSS -->
+    {% block meta %}
+
+    {% endblock meta %}
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
