--- a/hacksoft/templates/website/blog_post.html
+++ b/hacksoft/templates/website/blog_post.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
-{% load staticfiles i18n wagtailimages_tags wagtailcore_tags markdown %}
+{% load utils i18n wagtailimages_tags wagtailcore_tags markdown %}
+
+{% block meta %}
+  {% image page.cover_image max-900x900 as cover_image %}
+  {% full_url cover_image.url as image_url %}
+  {% include 'website/og_tags.html' with og_title=page.title og_url=page.full_url og_description=page.index_text og_type='article' og_image=image_url %}
+{% endblock meta %}
+
 {% block content %}
 <div class="content-wrapper blog-post-page">
   <div class="article-main-image">
