--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -70,6 +70,9 @@
             <li class="child sibling black-active-text {% menu_active 'contact-us' %}">
               <a href="/contact-us/">Contact Us</a>
             </li>
+            <li class="child sibling black-active-text {% menu_active 'blog' %}">
+              <a href="/blog/">Blog</a>
+            </li>
           </ul>
         </nav>
 
