--- a/hacksoft/templates/website/our_team_page.html
+++ b/hacksoft/templates/website/our_team_page.html
@@ -21,9 +21,9 @@
           <div class="section-content-row underlined float-container wow bounceInUp">
             <div class="smaller-part {% cycle 'align-right member-left' 'align-left member-right right-aligned' %} mb50 member-picture">
               {% image relation.teammate.initial_photo fill-500x500 as initial_photo %}
-              <img class="filer_image " alt="" src="{{ initial_photo.url }}" />
+              <img class="filer_image" alt="" src="{{ initial_photo.url }}" />
               {% image relation.teammate.secondary_photo fill-500x500 as secondary_photo %}
-              <img class="filer_image " alt="" src="{{ secondary_photo.url }}" />
+              <img class="filer_image secondary" alt="" src="{{ secondary_photo.url }}" />
             </div>
             <div class="larger-part text {% cycle 'member-left' 'member-right' %}">
               <b>{{ relation.teammate.name }}</b>
