--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -1323,7 +1323,8 @@ a {
   .blog-post-page .article-text .highlight pre {
     white-space: pre-wrap; }
   .blog-post-page .article-main-image img {
-    height: auto; }
+    height: auto;
+    max-width: 100%; }
   .blog-post-page .section-content {
     font-size: 18px; }
   .blog-post-page .article-categories {
