--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1775,6 +1775,7 @@ a {
     .article-main-image {
         img {
           height:auto;
+          max-width:100%;
         }
     }
     .section-content {
