Add support for featured article

--- a/hacksoft/templates/website/blog_posts_page.html
+++ b/hacksoft/templates/website/blog_posts_page.html
@@ -27,6 +27,46 @@
   <div class="section-content">
     {{ page.text|richtext }}
   </div>
+
+  <div class="featured-article">
+    {% if self.featured_article %}
+      <h1>Featured:</h1>
+    <div class="blog-post-container">
+
+      <a href="{{ self.featured_article.url }}">
+        <div class="blog-post">
+          {% image self.featured_article.cover_image width-300 as tmp_photo %}
+          <div class="head-image" style="background-image:url({{ tmp_photo.url }})">
+          </div>
+          {% for author in self.featured_article.authors.all %}
+            {% image author.initial_photo width-400 as avatar %}
+            <div class="avatar" style="background-image:url({{ avatar.url }})"></div>
+          {% endfor %}
+          <div class="blog-post-body">
+            <div class="title">
+              {{ page.title }}
+            </div>
+            <div class="authors">
+              {% for author in page.authors.all %}
+                <div class="author">
+                  {{ author.name }}
+                </div>
+              {% endfor %}
+            </div>
+            <div class="description">
+              {{ self.featured_article.index_text }}
+            </div>
+            <div class="date">
+              Posted: <span>{{ self.featured_article.date|date:"SHORT_DATE_FORMAT" }}</span>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    {% endif %}
+  </div>
+
+  <h1>Posts:</h1>
   <div class="blog-posts-container">
   {% for page in self.get_children.specific %}
     <div class="blog-post-container">
