--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1609,23 +1609,12 @@ a {
 
 .blog-posts-container {
     display:flex;
-    flex-wrap: wrap;
 }
 
 .featured-article {
     position:relative;
     z-index:1;
     margin-bottom:40px;
-    &:before {
-        content:"";
-        display:block;
-        background-color:#efefef;
-        position:absolute;
-        left:-100%;
-        width:300%;
-        height:420px;
-        z-index:-1;
-    }
 }
 .blog-post-section-heading {
     text-align: center;
@@ -1649,13 +1638,24 @@ a {
     }
     &.featured-blog-post {
         width:100%;
+        &:before {
+            content:"";
+            display:block;
+            background-color:#efefef;
+            position:absolute;
+            left:-100%;
+            width:300%;
+            height:110%;
+            margin-top:-70px;
+            z-index:-1;
+        }
         .blog-post {
             background-color: white;
             display:flex;
             .head-image {
                 background-size: cover;
                 min-height: 300px;
-                height:100%;
+                height:auto;
                 width:60%;
             }
             .blog-post-body {
